--- a/introduccionCss.html
+++ b/introduccionCss.html
@@ -6,10 +6,14 @@
         <title>Introducción a CSS</title>
         <link rel="stylesheet" href="CSS.css">
     </head>
-    <body>
+    <body class="css-pagina">
         <header>
             <h1>Introducción a CSS</h1>
             <p>Aquí encontrarás información sobre los selectores, propiedades,Box Model, FlexBox y Grid. </p>
+
+            <div>
+                
+            </div>
         </header>
         
         <nav>
